Closed Bug 1149971 Opened 10 years ago Closed 10 years ago

Fix problems caused by bug 1119878.

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

Attachments

(2 files)

I didn't know about "ac_add_options --enable-ipdl-tests", so I broke the IPDL tests with my patches for bug 1119878. As far as I can tell not all of these tests pass anyway in either ipc/ipdl/test/cxx or ipc/ipdl/test/ipdl at the moment. Also the comment in "ipc/ipdl/test/moz.build" suggests that the compiler tests run normally, but I think they are excluded by the moz.build in the parent directory. I also got an email saying I'd increased the "Number of Constructors" from 85 to 265. I'm pretty sure this is talking about static initializers and it is because of kCurrentProcessId being defined in a header that is included all over the place (including generated code).
try: -b do -p linux64,win32 -u reftest-e10s,crashtest-e10s,mochitests -t none
Comment on attachment 8586852 [details] [diff] [review] Part 1: Follow-up to bug 1119878 to fix broken IPDL tests. The only bit I'm not sure about here is the replacing of the two |OtherProcess() != 0|. As I don't think that could have happened with the old code. It would have been kInvalidProcessHandle (i.e. -1).
Attachment #8586852 - Flags: review?(dvander)
Comment on attachment 8586853 [details] [diff] [review] Part 2: Cet rid of kCurrentProcessId as it makes lots of static initializers. This is a straight forward replacement.
Attachment #8586853 - Attachment description: Bug 1149971 Part 2: Cet rid of kCurrentProcessId as it makes lots of static initializers. → Part 2: Cet rid of kCurrentProcessId as it makes lots of static initializers.
Attachment #8586853 - Flags: review?(dvander)
Attachment #8586852 - Flags: review?(dvander) → review+
Attachment #8586853 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: